# mnist_study

./: .gitignore  CMakeLists.txt  README.md  deviceInfo.cpp
fp16/: infer.fp16.cpp  onnx2engine.fp16.cpp
model/: README.md
utils/: DebugLogger.h  mnist-reader.cc  mnist-reader.h
